2001-09-13  Alex Graveley  <alex@ximian.com>

	* src/libsoup/soup-serializer.c
	(soup_serializer_get_namespace_prefix): Impl.

2001-09-12  Alex Graveley  <alex@ximian.com>

	* tests/filesys-server.c (main): Pass protocol to soup_server_new.
	* tests/server-test.c (main): Ditto.

	* src/soup-wsdl/Makefile.am (soup_wsdl_LDADD): Remove libwsdl.so
	link.

	* src/libwsdl/Makefile.am (libwsdl_build_a_SOURCES): Include
	libwsdl.so sources in libwsdl-build.a so libtool 1.3.5 doesn't
	ill.  Remove libwsdl_build_a_LIBADD.

	* src/libsoup/soup-server.c (soup_server_new): Take a SoupProtocol
	argument.

	* src/libsoup/soup-dav-server.c (move_copy): Serialize multi-status.
	(i_copy): Fix bug where directory contents were sometimes created
	before parent. Add multi-status error reporting.

	* src/libsoup/soup-dav.c (soup_dav_response_new): Remove
	response_phrase param.

2001-09-11  Alex Graveley  <alex@ximian.com>

	* src/libsoup/soup-dav-server.c (dav_proppatch): Rewrite to
	correctly handle rollback and propstat result.  Fill in missing
	response errors throughout.

2001-09-11  Alex Graveley  <alex@ximian.com>

	* tests/filesys-server.c: Initial commit of DAV test server which
	allows manipulation of the filesystem through Web-DAV.

	* tests/Makefile.am (noinst_PROGRAMS): Add filesys-server.

2001-09-10  Alex Graveley  <alex@ximian.com>

	* tests/mod-server-test.sh: Rename from mod-server-test to be
	obvious that its a script which simply executes soup-httpd.

2001-09-10  Alex Graveley  <alex@ximian.com>

	* build/soup_httpd.dsp (SOURCE): Fix typo.

	* build/libsoup.dsp: Add src/libsoup/soup-ntlm.[ch]
	(SOURCE): Remove soup-apache.c

2001-09-10  Alex Graveley  <alex@ximian.com>

	* src/libsoup/soup-dav-server.c (dav_mkcol): Report errors.  Check
	that parent path exists.
	(dav_put): Ditto.
	(dav_options): set 404 if path not found.
	(dav_options): Handle server-level OPTIONS requests.
	(parent_exists): impl.

2001-09-10  Alex Graveley  <alex@ximian.com>
